--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           <h1 class="sitename">John Russel Suarez</h1>
         </a>
 
-        <div class="social-links text-center">
-          <a href="https://www.facebook.com/johnrussell.golosinosuarez/" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="https://www.instagram.com/josh_wa96/" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/john-russel-suarez-414490226/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-          <a href="https://github.com/joshcoder14/" class="github"><i class="bi bi-github"></i></a>
+        <div class="social-links d-flex align-items-center justify-content-center">
+          <a href="https://www.facebook.com/johnrussell.golosinosuarez/" class="facebook d-flex"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/josh_wa96/" class="instagram d-flex"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/john-russel-suarez-414490226/" class="linkedin d-flex"><i class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/joshcoder14/" class="github d-flex"><i class="bi bi-github"></i></a>
         </div>
 
         <ul>
@@ -1214,10 +1214,10 @@
         <p>© <script>document.write(new Date().getFullYear())</script> <span>John Russel Suarez</span>. <span>All Rights Reserved</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="#"><i class="bi bi-facebook"></i></a>
-        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/johnrussell.golosinosuarez/"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/josh_wa96/"><i class="bi bi-instagram"></i></a>
         <a href="https://github.com/joshcoder14"><i class="bi bi-github"></i></a>
-        <a href="#"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/john-russel-suarez-414490226/"><i class="bi bi-linkedin"></i></a>
       </div>
     </div>
 
