--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
               <h3>Get In Touch</h3>
               <p>Have a project in mind or want to discuss opportunities? Send me a message!</p>
 
-              <form action="forms/contact.php" method="post" class="php-email-form" id="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <form name="contact" method="POST" netlify netlify-honeypot="bot-field" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                 <div class="row gy-4">
                   <div class="col-md-6">
                     <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
