modify resume to html file

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
       </div>
 
       <div class="w-100 p-3 d-flex justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="100">
-        <a href="resume.php">Download Resume</a>
+        <a href="resume.html">Download Resume</a>
       </div>
 
     </section><!-- /Resume Section -->
