--- a/resume.html
+++ b/resume.html
@@ -147,7 +147,7 @@
 </head>
 <body>
     <div class="go-home">
-        <a href="index.php" class="btn">
+        <a href="index.html" class="btn">
             Go to Home
         </a>
         
